--- a/EDA_intro.ipynb
+++ b/EDA_intro.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter for US Data Analyst roles"
+    "### Filter for India Data Analyst roles"
    ]
   },
   {
